networkpolicy/calico/NetworkPolicy-default-deny-ingess.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: hmoon
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
