networkpolicy/calico/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: hmoon
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
